--- a/style.css
+++ b/style.css
@@ -3,24 +3,117 @@
 	padding: 0;
 	box-sizing: border-box;
 }
-a {
-	text-decoration: none;
+.clearfix:after{
+	content:"";
+	display:block;
+	clear:both;
 }
 header {
 	width: 100%;
-	padding:20px 0;
-	margin: 0 auto;
+}
+header .headline{
+	padding: 20px 0;
 	text-align: center;
+}
+a{
+	text-decoration: underline;
 }
 
 .nav-list{
 	text-align: center;
 	padding: 15px 0;
 	margin: 0 auto;
+	border-bottom: 1px solid;
+	border-top: 1px solid;
 }
 .nav-list-item{
 	list-style: none;
 	display: inline-block;
-	margin: 0 15px;
+	margin: 0 20px;
 }
-
+.main{
+	width: 800px;
+	margin: 50px auto;
+}
+.box1{
+	width: 200px;
+	height: 200px;
+	float: left;
+	background-color: #e6ffe9;
+}
+.box2{
+	width: 200px;
+	height: 200px;
+	float: left;
+	background-color: #cdffe3;
+}
+.box3{
+	width: 200px;
+	height: 200px;
+	float: left;
+	background-color: #aeffbd;
+}
+.box4{
+	width: 200px;
+	height: 200px;
+	float: left;
+	background-color: #93ffab;
+}
+.box5{
+	width: 200px;
+	height: 200px;
+	float: left;
+	background-color: #f3ffd8;
+}
+.box6{
+	width: 200px;
+	height: 200px;
+	float: left;
+	background-color: #f3ffd8;
+}
+.box7{
+	width: 200px;
+	height: 200px;
+	float: left;
+	background-color: #f3ffd8;
+}
+.box8{
+	width: 200px;
+	height: 200px;
+	float: left;
+	background-color: #f3ffd8;
+}
+.box9{
+	width: 200px;
+	height: 200px;
+	float: left;
+	background-color: #f3ffd8;
+}
+.box10{
+	width: 200px;
+	height: 200px;
+	float: left;
+	background-color: #f3ffd8;
+}
+.box11{
+	width: 200px;
+	height: 200px;
+	float: left;
+	background-color: #f3ffd8;
+}
+.box12{
+	width: 200px;
+	height: 200px;
+	float: left;
+	background-color: #f3ffd8;
+}
+footer{
+	width: 100%;
+	height: 120px;
+	text-align: center;
+	padding: 50px 0;
+	background-color: #848282;
+}
+.footer-text{
+	color: #fff;
+}
